数字格式化处理

--- a/博客学习/跨域.md
+++ b/博客学习/跨域.md
@@ -142,3 +142,125 @@ $.ajax({
  response.setHeader("Access-Control-Allow-Credentials", "true");
 ```
 
+#### 4.window.name  + iframe
+
+##### window对象有一个name属性，该属性有一个特征：即在一个窗口的生命周期内，窗口载入的所有的页面都是共享一个window.name的，每一个页面对window.name都有读写的权限，window.name是持久的存在于一个窗口载入的所有页面中的，并不会因为新的页面的载入而被重置。
+
+```javascript
+// a.html
+window.name = '我是window设置的name值'   // window.name的值只能是字符串的形式，这个字符串的大小最大只能允许2M左右，具体取决于不同的浏览器，但是一般是够用了。
+setInterval(function(){
+    window.location = 'b.html'  // 跳转到b页面
+})
+
+// b.html
+console.log(window.name)  // 我是window设置的name值
+
+// 以上发生了页面跳转
+```
+
+##### 如果页面不跳转，如何通过window.name跨域获取数据
+
+```javascript
+//  比如有一个www.example.com/a.html页面。需要通过a.html页面里的js来获取另一个位于不同域上的页面www.cnblogs.com/data.html中的数据。
+// 具体的实现方法就是:a.html页面中使用一个隐藏的iframe来充当一个中间角色，由iframe去获取data.html的数据，然后a.html再去得到iframe获取到的数据。
+
+// www.test.com下的a.html
+<body>
+  <button id="btn">点击</button>
+  <script>
+var btn = document.getElementById('#btn')
+btn.onclick = function(){
+  var iframe = document.createElement('iframe')
+  iframe.style.display = 'none'
+  iframe.src="www.cnblogs.com/data.html"+"?name=sundong"
+  var body=document.getElementsByTagName("body")[0];
+  body.appendChild(inf);                          //引入a页面
+
+  iframe.onload=function(){
+    iframe.src='http://www.test.com/kongbai.html'       //iframe加载完成，加载www.test.com域下边的空白页kongbai.html
+    console.log(iframe.contentWindow.name)        //输出window.name中的数据
+    body.removeChild(iframe)                      //清除iframe
+  }
+}
+   </script>
+</body>
+
+
+// data.html
+var str=window.location.href.substr(-1,1);      //获取url中携带的参数值
+$.ajax({
+  type:"get",
+  url:"http://www.domain.com/a.php"+"?m="+str, //通过ajax将查询参数传给php页面
+  async:true,
+  success:function(res){
+    window.name=res                         //将接收到的查询数据赋值给window.name
+  },
+  error:function(){
+    window.name='error'                      
+  }
+});
+```
+
+#### 5.window.postMessage(data.origin)  
+
+##### data:==要传递的数据，在传递的时候需要通过JSON.stringify()进行序列化== 
+
+##### origin：字符串参数，指明目标窗口的源，协议+主机+端口号[+URL]，URL会被忽略，所以可以不写，这个参数是为了安全考虑，postMessage()方法只会将message传递给指定窗口，当然如果愿意也可以建参数设置为"*"，这样可以传递给任意窗口，如果要指定和当前窗口同源的话设置为"/"。
+
+```javascript
+// 在父框架页面index.html发送obj对象给远程服务器的wozien.com/test/b.html，该页面是通过iframe加载的，如下
+
+// index.html
+<iframe id="proxy" src="http://wozien.com/test/b.html" onload = "postMsg()" style="display: none" ></iframe>  
+<script type="text/javascript">  
+  var obj = {  
+    msg: 'this is come from client message!'  
+  }  
+
+function postMsg (){  
+  var iframe = document.getElementById('proxy');  
+  var win = iframe.contentWindow;  
+  win.postMessage(obj,'http://wozien.com');  
+}  
+
+</script>  
+
+// 在远程页面b.html中监听message事件，先通过origin属性判断下数据来源的域是否可信任，加强安全措施。具体代码如下：
+<script type="text/javascript">  
+  window.addEventListener('message',function(event){
+  if(event.origin !== 'http://localhost') return;  
+  console.log(event.origin+' '+event.data.msg);  
+})
+</script>  
+```
+
+#### 6.修改document.domain跨子域
+
+**前提条件：==这两个域名必须属于同一个基础域名!而且所用的协议，端口都要一致，否则无法利用document.domain进行跨域，所以只能跨子域==**
+
+#####  在[根域](https://developer.mozilla.org/en-US/docs/XPCOM_Interface_Reference/nsIEffectiveTLDService#getBaseDomain.28.29)范围内，允许把domain属性的值设置为它的上一级域。例如，在”aaa.xxx.com”域内，可以把domain设置为 “xxx.com” 但不能设置为 “xxx.org” 或者”com”。
+
+##### 现在存在两个域名aaa.xxx.com和bbb.xxx.com。在aaa下嵌入bbb的页面，由于其`document.name`不一致，无法在aaa下操作bbb的js。可以在aaa和bbb下通过js将`document.name = 'xxx.com';`设置一致，来达到互相访问的作用。
+
+##### [一级域名  ](http://www.sojson.com/tag_yjym.html)有的人叫根域名，如：sojson.com、baidu.com、sina.com、sina.com.cn、sina.cn.net 等等。
+
+##### [二级域名  ](http://www.sojson.com/tag_ejym.html)是指增加了一级，包括www。如：`www.sojson.com、icp.sojson.com、zhidao.baidu.com、www.baidu.com`  等等。有人把www.sojson.com叫一级域名这是错误的。 
+
+#### 7.websocket:允许服务器端与客户端进行全双工（full-duplex）的通信
+
+##### 为什么还需要websocket协议？
+
+==http协议只能是客户端向服务器发送请求，而做不到服务器主动向客户端推送信息==
+
+1. 建立连接和断开连接、发送数据和接收数据、处理错误。
+2. WebSocket实例对象有一个readyState属性，表示目前的状态，可取4个值：
+  【0：正在连接；1：连接成功；2：正在关闭；3：连接关闭】
+3. 客户端建立WebSocket流程：
+  （0）检测浏览器是否支持WebSocket
+  （1）握手协议成功以后，readyState就从0变为1，并触发open事件
+  （2）关闭WebSocket连接，会触发close事件
+  （3）客户端收到服务器发送的数据，会触发message事件
+  （4）连接建立后，客户端通过send方法向服务器端发送数据
+
+#### 8.代理
