--- a/博客学习/数字格式化.md
+++ b/博客学习/数字格式化.md
@@ -27,3 +27,4 @@ function formatText(str,size,delimiter){
  }
 ```
 
+![image-20200603171104739](/Users/sundong/Library/Application Support/typora-user-images/image-20200603171104739.png)
